# west

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  README.md  requirements.txt
demo/goat_slm/: README.md  demo_goat_slm.py  requirements.txt  run_demo_goat_slm.sh  test_goat_slm.py
demo/osum_echat/: test_osum_echat.py
docs/: README.md  data_extractor.md  data_format.md  data_pack.md
examples/aishell/: run.sh
examples/belle_1.4M_qa/: README.md  run.sh
examples/on_policy_distillation/: README.md  conf  requirements.txt  run.sh  scripts
runtime/nano_touch_asr/: CMakeLists.txt  README.md
runtime/nano_touch_tts/: CMakeLists.txt  README.md
runtime/nano_touch_tts/src/: frontend  utils
runtime/nano_touch_tts/src/model/: CMakeLists.txt  hifi_gan.cc  hifi_gan.h  onnx_model.h  s3tokenizer.cc  s3tokenizer.h  speaker_model.cc  speaker_model.h  touch_tts_flow.cc  touch_tts_flow.h  touch_tts_llm.cc  touch_tts_llm.h
test/: test_osum_echat.py  test_sequence_pack.py
tools/: add_speech_tokens.py  compute_acc_of_contain.py  compute_similarity.py  compute_wer.py  gen_tts_wavscp_text.py  get_qa_hyp_ref_text.py  prepare_codec.py  tn_utils.py  vocoder.py  whisper_asr.py
tools/convert_scripts/: convert_fireredasr_llm.py
west/: __init__.py
west/dataset/: __init__.py  dataset.py  extractor.py  extractor_asr_wenet.py  extractor_tts_codec.py  extractor_tts_flow.py
west/model/: speech_llm.py
west/models/: __init__.py  codec_llm.py  flow.py  model.py  speech_llm.py
west/trainer/: grpo_trainer.py  kd_trainer.py
west/utils/: audio.py  mask.py  utils.py
(+120 files in other folders)
